--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ python_log_indenter = "^0.9"
 scikit-learn = "^1.3.2"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
