--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ pytest = "^8.3.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
