--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,18 @@
 [tool.poetry]
-name = "cfggme"
+name = "scott"
 version = "0.1.0"
-description = "Curvature Filtrations for Graph Generative Models"
-authors = ["jeremy.wayland <jeremy.don.wayland@gmail.com>"]
+description = "SCOTT: Studying Curvature Operations and Topology Toolkit"
+authors = ["Jeremy Wayland <jeremy.don.wayland@gmail.com>", "Emily Simons<emsimons4@gmail.com>", "Bastian Rieck <bastian@rieck.me>"]
 license = "BSD 3-Clause License"
 readme = "README.md"
 
+
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
-numpy = "^1.26.1"
-networkx = "^3.2"
-POT = "^0.9.1"
-gudhi = "^3.8.0"
-joblib = "^1.3.2"
-pandas = "^2.1.1"
-scipy = "^1.11.3"
-python_log_indenter = "^0.9"
-scikit-learn = "^1.3.2"
+python = ">=3.10"
+gudhi = "^3.10.1"
+networkx = "^3.4.2"
+pot = "^0.9.5"
+scikit-learn = "^1.5.2"
 
 
 [tool.poetry.group.dev.dependencies]
