--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,7 +3,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.9" # Specify the Python version
+    python: 3.12 # Specify the Python version
   jobs:
     include:
       - job: build
