--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,14 +3,14 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: 3.12 # Specify the Python version
+    python: "3.12" # Specify the Python version
   jobs:
     include:
       - job: build
         image: testing # If you need a custom image, specify it here
 
 python:
-  version: 3.9 # This is still valid, but it should be inside `build.tools`
+  version: "3.12" # This is still valid, but it should be inside `build.tools`
   install:
     - method: pip
       path: .
