--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,7 +2,7 @@ version: 2
 
 build:
   image: testing
-  # os: ubuntu-22.04
+  os: ubuntu-22.04
   # tools:
   #   python: "3.12" # Specify the Python version
   # jobs:
