--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,8 +3,8 @@ version: 2
 build:
   image: testing
   os: ubuntu-22.04
-  # tools:
-  #   python: "3.12" # Specify the Python version
+  tools:
+    python: "3.12" # Specify the Python version
   # jobs:
   #   include:
   #     - job: build
