--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Upload documentation artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/build/html # Upload the built documentation as an artifact
+          path: docs/build/
 
   # Deploy the artifact to GitHub Pages.
   deploy:
