--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=8.3.3",
+    "black>=25.9.0",
 ]
 docs = [
     "furo>=2024.8.6",
