--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "gudhi>=3.11.0",
+    "joblib>=1.5.2",
     "networkx>=3.4.2",
     "pot>=0.9.5",
     "scikit-learn>=1.5.2",
